@@ -1,6 +1,6 @@
 /* Cron Chanstats
  *
- * (c) 2004-2012 Denora Team
+ * (c) 2004-2013 Denora Team
  * Contact us at info@denorastats.org
  *
  * Please read COPYING and README for furhter details.
@@ -30,22 +30,52 @@ void DenoraFini(void);
 int DenoraInit(int argc, char **argv)
 {
 	CronEvent *evt;
+	int status;
 
 	if (denora->debug >= 2)
 	{
 		protocol_debug(NULL, argc, argv);
 	}
+
+	if (!denora->do_sql)
+	{
+		alog(LOG_NORMAL,"SQL not enabled unloading cron_chanstats");
+		return MOD_STOP;
+	}
+
 	moduleAddAuthor("Denora");
 	moduleAddVersion
 	("");
 	moduleSetType(CORE);
 
 	evt = createCronEvent(CRON_MIDNIGHT, chanstats_daily);
-	moduleAddCronEvent(evt);
+	status = moduleAddCronEvent(evt);
+	if (status != MOD_ERR_OK)
+	{
+		alog(LOG_NORMAL,
+		     "Error Occurred setting cron->chanstats_daily [%d][%s]", status,
+		     ModuleGetErrStr(status));
+		return MOD_STOP;
+	}
 	evt = createCronEvent(CRON_WEEKLY_MONDAY, chanstats_weekly);
-	moduleAddCronEvent(evt);
+	status = moduleAddCronEvent(evt);
+	if (status != MOD_ERR_OK)
+	{
+		alog(LOG_NORMAL,
+		     "Error Occurred setting cron->chanstats_weekly [%d][%s]", status,
+		     ModuleGetErrStr(status));
+		return MOD_STOP;
+	}
+
 	evt = createCronEvent(CRON_MONTHLY, chanstats_month);
-	moduleAddCronEvent(evt);
+	status = moduleAddCronEvent(evt);
+	if (status != MOD_ERR_OK)
+	{
+		alog(LOG_NORMAL,
+		     "Error Occurred setting cron->chanstats_month [%d][%s]", status,
+		     ModuleGetErrStr(status));
+		return MOD_STOP;
+	}
 
 	return MOD_CONT;
 }
